--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,15 @@
 .btn{
-  background-color: mediumaquamarine;
+  background-color:  grey;
   color: aliceblue;
 }
 .cont{
-  background-color: teal;
+  background-color: white;
   text-decoration-color: white;
-  padding-top: 20px;
-  padding-bottom: 20px;
+/* padding-top: 20px; */
+  /* padding-bottom: 20px; */
 }
 body{
-  background-color: lemonchiffon;
+  background-color: whitesmoke  ;
 }
 span{
   margin-left: 80px;
@@ -17,8 +17,8 @@ span{
   
 }
 .but{
-  background-color: mediumaquamarine;
-  color: black;
+  background-color: grey;
+  color: white;
 }
 .boot{
   display:flex;
@@ -33,7 +33,7 @@ span{
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 .btn2{
-  background-color: mediumaquamarine;
+  background-color: white;
   color: black;
   padding-top: 9px;
   padding-bottom: 9px;
@@ -60,8 +60,11 @@ span{
   margin-top: -30px;
 }
 section{
-  background-color: white;
-  color: black;
+  background-image: url(/images/bg2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: white;
   padding-top: 200px;
   padding-bottom: 300px;
   padding-left: 80px;
@@ -72,13 +75,15 @@ section h1{
   font-size: 60px;
 }
 .head{
-  font-size: 35px;
+  font-size: 45px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-weight: 900;
 }
 .head2{
   font-weight: 700;
 }
 .head2:hover{
-  color: mediumaquamarine;
+  color: blue;
 }
 .sec{
   padding-top: 80px;
@@ -92,7 +97,7 @@ section h1{
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }.foot{
   display: flex;
-  background-color: whitesmoke;
+  background-color: rgba(128, 128, 128, 0.347);
   padding-top: 30px;
   padding-bottom: 1px;
   display:flex;
@@ -126,7 +131,7 @@ section h1{
   align-items: center;
   margin: 0px auto;
   margin-top: 40px;
-  background-color: lemonchiffon;
+  background-color: #6aa8f0;
 }
 .scold{
   margin-top: 70px;
@@ -170,14 +175,14 @@ section h1{
   font-size: 18px;
 }
 .fa-solid:hover{
-  color: mediumaquamarine;
+  color: blue;
 }
 .btn:hover{
   text-decoration: none;
 }
 .drop2:hover{
   text-decoration: none;
-  color: mediumaquamarine;
+  color: blue;
 }
 .terms{
   padding-bottom: 80px;
@@ -230,5 +235,10 @@ section h1{
   padding-left: 30px;
   padding-bottom: 30px;
 }
+
+
+
+
+
 
 
