--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,14 +1,15 @@
 .grid {
     display: grid;
-   grid-template-columns: repeat(3, 1fr);
+   grid-template-columns: repeat(4, 1fr);
     gap: 78px;
     padding: 28px;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 footer{
-    max-width: 1000px;
+    
     margin: 0px auto;
     justify-content: center;
     padding: 30px;
