--- a/src/components/home/HomePage.css
+++ b/src/components/home/HomePage.css
@@ -29,4 +29,25 @@ margin: 0px auto;
         justify-content: center;
     }
 }
-
+.container2{
+    display: grid;
+   grid-template-columns: repeat(3, 1fr) ;
+    gap: 10px;
+    padding: 10px;
+    justify-content: center;
+   align-items: center;
+   max-width: 1000px;
+   margin: 0px auto;
+   text-align: center;
+   padding-top: 40px;
+}
+@media (max-width:768px) {
+    .container2{
+       grid-template-columns: repeat(1, 1fr) ;
+        gap: 10px;
+      text-align: center;
+       padding: 10px;
+       justify-content: center;
+       align-items: center;padding-left: 25px;
+    }
+}
