--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,7 @@ section h1{
 }
 .sec2{
   padding-bottom: 50px;
+  padding-left: 30px;
 }
 .sec h1{
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
