--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+*{
+  margin: 0;
+  padding: o;
+}
 .btn{
   background-color:  grey;
   color: aliceblue;
@@ -8,7 +12,7 @@
   background-color: white;
   text-decoration-color: white;
 /* padding-top: 20px; */
-  /* padding-bottom: 20px; */
+   /* padding-top: -70px; */
 }
 body{
   background-color: whitesmoke  ;
@@ -18,24 +22,10 @@ span{
   cursor: pointer;
   
 }
-.but{
-  background-color: grey;
-  color: white;
-  padding-right: 10px;
-  padding-left: 10px;
-}
-.boot{
-  display:flex;
-  justify-content: center;
-}
-.scoot{
-  margin-top: 30px;
-  text-align: center;
-  padding-bottom: 40px;
-}
-.scoot h1{
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
+
+
+
+
 .btn2{
   background-color: white;
   color: black;
@@ -61,8 +51,7 @@ span{
   margin-left: 500px;
 }
 .stock{
-  margin-left: 190px;
-  margin-top: -30px;
+  text-align: center;
 }
 section{
   background-image: url(/images/bg2.jpg);
@@ -142,7 +131,7 @@ section h1{
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 40px;
- 
+  box-shadow: 0px 8px 7px 1px rgba(0,0,0,0.1);
   background-color: white;
 }
 .scold{
@@ -154,22 +143,11 @@ section h1{
 .form{
   margin-right: 150px;
 }
-.fum{
-  padding-bottom: 240px;
+
+.pass{
+
 }
-.gender{
-  margin-top: 70px;
-  padding-bottom: 50px;
-  padding-left: 80px;
-}
-.gender h1{
-  font-weight: 700;
-  font-size: 50px;
-}
-.gender h3{
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
- 
-}
+
 .social{
   font-size: 30px;
 }
@@ -259,6 +237,10 @@ section h1{
   padding-top: 30px;
   padding-left: 30px;
   padding-bottom: 30px;
+}
+.admin{
+  padding-bottom: 90px;
+  padding-top: 70px;
 }
 
 
