--- a/src/components/allproducts/Products.css
+++ b/src/components/allproducts/Products.css
@@ -15,7 +15,7 @@
     color: #333;
   }
   .product-card-img{
-    height: 200px;
+    height: 290px;
     width: 280px;
   }
   
@@ -58,11 +58,11 @@
     color: #555;
   }
   
-  .stock {
+  /* .stock {
     font-size: 0.9rem;
     color: #4CAF50;
     margin-bottom: 10px;
-  }
+  } */
   
   .but {
     margin-top: 10px;
