--- a/src/components/home/HomePage.css
+++ b/src/components/home/HomePage.css
@@ -7,13 +7,13 @@
     
   }
   .product-card-img{
-    height: 200px;
-    width: 280px;
+    height: 200000px;
+    width: 283330px;
   }
   
   /* Grid layout for product cards */
   .product-grid {
-    display: grid;
+   
     grid-template-columns: repeat(3, 1fr);
     gap: 25px;
     padding-left: 90px;
@@ -52,11 +52,11 @@
     color: #555;
   }
   
-  .stock {
+  /* .stock {
     font-size: 0.9rem;
     color: #4CAF50;
     margin-bottom: 10px;
-  }
+  } */
   
   .but {
     margin-top: 10px;
