--- a/src/components/women/Women.css
+++ b/src/components/women/Women.css
@@ -65,11 +65,11 @@
     color: #555;
   }
   
-  .stock {
+  /* .stock {
     font-size: 0.9rem;
     color: #4CAF50;
     margin-bottom: 10px;
-  }
+  } */
   
   .but {
     margin-top: 10px;
