--- a/src/components/home/HomePage.css
+++ b/src/components/home/HomePage.css
@@ -1,4 +1,4 @@
-.product-grid {
+/* .product-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 25px;
@@ -7,11 +7,10 @@
     
   }
   .product-card-img{
-    height: 200000px;
-    width: 283330px;
+    height: 200px;
+    width: 280px;
   }
   
-  /* Grid layout for product cards */
   .product-grid {
    
     grid-template-columns: repeat(3, 1fr);
@@ -21,7 +20,6 @@
     
   }
   
-  /* Product card styling */
   .product-card {
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -52,11 +50,11 @@
     color: #555;
   }
   
-  /* .stock {
+  .stock {
     font-size: 0.9rem;
     color: #4CAF50;
     margin-bottom: 10px;
-  } */
+  }
   
   .but {
     margin-top: 10px;
@@ -145,4 +143,4 @@
        justify-content: center;
        align-items: center;padding-left: 25px;
     }
-}
+} 
