--- a/src/components/men/Men.css
+++ b/src/components/men/Men.css
@@ -1,6 +1,4 @@
-/* Product.css */
 
-/* Base styles for the Products component */
 .fum {
     padding: 20px;
     
@@ -24,7 +22,6 @@
     width: 280px;
   }
   
-  /* Grid layout for product cards */
   .product-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -34,7 +31,6 @@
     
   }
   
-  /* Product card styling */
   .product-card {
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -65,7 +61,7 @@
     color: #555;
   }
   
-  /* .stock {
+  .stock {
     font-size: 0.9rem;
     color: #4CAF50;
     margin-bottom: 10px;
@@ -75,9 +71,7 @@
     margin-top: 10px;
   }
   
-  /* Media Queries */
   
-  /* For tablets and small laptops */
   @media (max-width: 1024px) {
     .product-grid {
       grid-template-columns: repeat(2, 1fr);
@@ -86,7 +80,6 @@
     }
   }
   
-  /* For mobile phones */
   @media (max-width: 768px) {
     .product-grid {
       grid-template-columns: repeat(2, 1fr);
@@ -106,7 +99,7 @@
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         overflow: hidden;
         transition: transform 0.3s ease;
-        width: 220px;
+        width: 180px;
       }
   
     .product-card .card-body {
@@ -122,7 +115,7 @@
     }
     .product-card-img{
         height: 200px;
-        width: 220px;
+        width: 180px;
       }
   
     .stock {
@@ -132,6 +125,7 @@
     .but {
       font-size: 0.9rem;
       padding: 8px 12px;
+      padding-left: 20px;
     }
   }
   
