--- a/src/components/women/Women.css
+++ b/src/components/women/Women.css
@@ -81,8 +81,9 @@
   @media (max-width: 768px) {
     .product-grid {
       grid-template-columns: repeat(2, 1fr);
-      padding-right: 20px;
-      padding-left: 30px;
+     padding: 80px;
+      gap: 15px ;
+
     }
   
     .fum {
@@ -113,7 +114,7 @@
     font-size: 0.9rem;
   }
   .product-card-img{
-      height: 200px;
+      height: 140px;
       width: 180px;
     }
   
@@ -122,8 +123,10 @@
     }
   
     .but {
-      font-size: 0.9rem;
-      padding: 8px 12px;
+    
+    font-size: 14px;
+   padding-top: 0px;
+   padding-bottom: 0px;
     }
   }
   
