--- a/src/components/allproducts/Products.css
+++ b/src/components/allproducts/Products.css
@@ -81,6 +81,8 @@
       grid-template-columns: repeat(2, 1fr);
       padding-right: 20px;
       padding-left: 30px;
+      padding: 80px;
+      gap: 15px ;
     }
   
     .fum {
@@ -112,7 +114,7 @@
     font-size: 0.9rem;
   }
   .product-card-img{
-      height: 200px;
+    height: 140px;
       width: 180px;
     }
   
@@ -121,8 +123,9 @@
     }
   
     .but {
-      font-size: 0.9rem;
-      padding: 8px 12px;
+      font-size: 14px;
+      padding-top: 0px;
+      padding-bottom: 0px;
     }
   }
 
