--- a/src/components/men/Men.css
+++ b/src/components/men/Men.css
@@ -84,6 +84,8 @@
     .product-grid {
       grid-template-columns: repeat(2, 1fr);
       padding-left: 10px;
+      padding: 80px;
+      gap: 15px ;
     }
   
     .fum {
@@ -114,7 +116,7 @@
       font-size: 0.9rem;
     }
     .product-card-img{
-        height: 200px;
+      height: 140px;
         width: 180px;
       }
   
@@ -123,8 +125,9 @@
     }
   
     .but {
-      font-size: 0.9rem;
-      padding: 8px 12px;
+      font-size: 14px;
+   padding-top: 0px;
+   padding-bottom: 0px;
     }
   }
   
