--- a/src/components/allproducts/Products.css
+++ b/src/components/allproducts/Products.css
@@ -66,6 +66,23 @@
   
   .but {
     margin-top: 10px;
+    background-color:  grey;
+    color: aliceblue;
+    padding-right: 40px;
+    padding-left: 40px;
+  }
+  #detail{
+    margin-bottom: 150px;
+   }
+   .detail-button{
+    margin-top: 10px;
+    background-color:  grey;
+    font-size: 20px;
+    color: aliceblue;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-right: 140px;
+    padding-left: 140px;
   }
   
   
@@ -83,6 +100,12 @@
       padding-left: 30px;
       padding: 80px;
       gap: 15px ;
+    }
+    .scoot {
+      text-align: center;
+      margin-bottom: -50px;
+      padding-top: 30px;
+      padding-bottom: 15px;
     }
   
     .fum {
@@ -126,18 +149,23 @@
     }
   
     .but {
+      margin-top: 10px;
+      font-size: 14px;
+      background-color:  grey;
+      color: aliceblue;
+      padding-right: 30px;
+      padding-left: 30px;
     
-      font-size: 10px; 
-    padding: 10px 80px; 
-    border-radius: 5px; 
-    color: white;
-    text-align: center; 
-    white-space: nowrap; 
-    display: inline-block; 
-    cursor: pointer;
-    text-decoration: none; 
-  
-    
+    }
+    .detail-button{
+      margin-top: 10px;
+      background-color:  grey;
+      font-size: 20px;
+      color: aliceblue;
+      padding-top: 8px;
+      padding-bottom: 8px;
+      padding-right: 100px;
+      padding-left: 100px;
     }
   }
 
