--- a/src/components/cart/CartPage.css
+++ b/src/components/cart/CartPage.css
@@ -1,4 +1,3 @@
-/* CartPage.css */
 .cart-page {
     padding: 20px;
 }
@@ -54,7 +53,7 @@
     border-radius: 6px;
 }
 .btn5:hover{
-    background-color:  #1363DF;
+    background-color:  darkgrey;
 }
 .cart-item-info{
     padding-top: 20px;
