--- a/src/components/checkout/Checkout.css
+++ b/src/components/checkout/Checkout.css
@@ -1,4 +1,3 @@
-/* src/Checkout.css */
 .checkout-container {
     max-width: 800px;
     margin: 0 auto;
@@ -38,13 +37,11 @@ input, textarea, select {
 
 button {
     padding: 10px 15px;
-    background-color: #28a745;
+    background-color: grey;
     color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
 }
 
-button:hover {
-    background-color: #218838;
-}
+
