--- a/src/components/contact/ContactPage.css
+++ b/src/components/contact/ContactPage.css
@@ -1,16 +1,13 @@
-/* Container for the contact page */
 .contact {
     padding: 20px;
     text-align: center;
   }
   
-  /* Header styling */
   .contact h1 {
     font-size: 2em;
     margin-bottom: 20px;
   }
   
-  /* Grid container styling */
   .contact-info {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -21,7 +18,6 @@
     padding: 0 15px;
   }
   
-  /* Contact info item styling */
   .contact-info p {
     display: flex;
     align-items: center;
@@ -29,22 +25,29 @@
     margin: 10px 0;
   }
   
-  /* Icon styling */
   .contact-info p svg {
     margin-right: 10px;
     font-size: 1.5em;
   }
   
-  /* Map container styling */
   .map-container {
     margin-top: 20px;
     width: 100%;
   }
   
-  /* Responsive iframe styling */
   .map-container iframe {
     width: 100%;
     height: 400px;
     border: none;
+  }
+  .contact{
+    padding-bottom: 190px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .contact h1{
+    padding-top: 30px;
+    padding-left: 30px;
+    padding-bottom: 30px;
   }
   
