--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,13 @@
   margin: 0;
   padding: o;
 }
-.btn{
+/* .btn{
   background-color:  grey;
   color: aliceblue;
-  padding-right: 60px;
-  padding-left: 50px;
-}
-.cont{
-  background-color: white;
-  text-decoration-color: white;
-/* padding-top: 20px; */
-   /* padding-top: -70px; */
-}
+  padding-right: 40px;
+  padding-left: 40px;
+} */
+
 body{
   background-color: whitesmoke  ;
 }
@@ -26,24 +21,7 @@ span{
 
 
 
-.btn2{
-  background-color: white;
-  color: black;
-  padding-top: 9px;
-  padding-bottom: 9px;
-  padding-left: 20px;
-  padding-right: 20px;
-  border: none;
-  cursor: pointer;
-  border-radius: 10px;
-}
-.btn2 a{
-  color: black;
-}
-.btn2 a:link{
-  text-decoration: none;
-  
-}
+
 .logo{
   height: 300px;
   width: 350px;
@@ -53,164 +31,14 @@ span{
 .stock{
   text-align: center;
 }
-section{
-  background-image: url(/images/bg2.jpg);
-  background-repeat: no-repeat;
-  min-height: 700px;
-  background-size: cover;
-  background-position: center;
-  color: white;
-  padding-bottom: 300px;
- display: flex;
- justify-content: start;
- padding:70px 70px;
- flex-direction: column;
- gap: 60px;
-  
-}
-section h1{
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  font-size: 60px;
-}
 
-.head2{
-  font-weight: 700;
-}
-.head2:hover{
-  color: blue;
-}
-.sec{
-  padding-top: 80px;
-  margin-bottom: 75px;
-}
-.sec2{
-  padding-bottom: 50px;
-  padding-left: 30px;
-}
-.sec h1{
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}.foot{
-  display: flex;
-  background-color: rgba(128, 128, 128, 0.347);
-  padding-top: 30px;
-  padding-bottom: 1px;
-  justify-content: center;
-  padding-right: 20px;
-}
-.right{
-   padding-top: 20px;
-}
-.fut{
- 
- 
-  padding-right: 10px;
-}
-.us{
- 
-  padding-right: 30px;
- 
-}
-.us ul {
-   list-style: none;
-}
-.us ul li{
-  color: black;
-}
-.sign-cont{
-  max-width: 70%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0px auto;
-  margin-top: 40px;
-  padding-top: 30px;
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-bottom: 40px;
-  box-shadow: 0px 8px 7px 1px rgba(0,0,0,0.1);
-  background-color: white;
-}
-.scold{
-  margin-top: 70px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.form{
-  margin-right: 150px;
-}
 
-.pass{
 
-}
 
-.social{
-  font-size: 30px;
-}
-.social a{
-  padding-right: 20px;
-  color: black;
-}.us ul li a{
-  color: black;
-}
-.us ul li a:link{
-  text-decoration: none;
-}
 
-.fa-solid  {
-  font-size: 18px;
-  padding-right: 10px;
-}
-.fa-solid:hover{
-  color: blue;
-}
-#user{
-  padding-top: 8px;
-  font-size: 35px;
-  padding-left: 20px;
-}
-#user:hover{
-  text-decoration: none;
-  color: blue;
-}
-.btn:hover{
-  text-decoration: none;
-}
-.drop2{
-  font-size: 13px;
-}
-.drop2:hover{
-  text-decoration: none;
-  color: blue;
-}
-.terms{
-  padding-bottom: 80px;
-  padding-left: 50px;
-  padding-right: 50px;
-}
-.terms h1{
-  padding-left: 30px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-.terms h5{
-  font-size: 18px;
-  text-align: center;
-}
-.privacy{
-  padding-bottom: 80px;
-  padding-left: 50px;
-  padding-right: 50px;
-}
-.privacy h1{
-  padding-top: 30px;
-  padding-left: 30px;
-  padding-bottom: 30px;
-}
-.privacy h3{
-  font-size: 18px;
-  text-align: center;
-}
+
+
+
 .about{
   padding-bottom: 190px;
   padding-left: 50px;
@@ -224,16 +52,7 @@ section h1{
   font-size: 18px;
   text-align: center;
 }
-.contact{
-  padding-bottom: 190px;
-  padding-left: 50px;
-  padding-right: 50px;
-}
-.contact h1{
-  padding-top: 30px;
-  padding-left: 30px;
-  padding-bottom: 30px;
-}
+
 .admin{
   padding-bottom: 90px;
   padding-top: 70px;
