--- a/src/components/account/ProfilePage.css
+++ b/src/components/account/ProfilePage.css
@@ -6,3 +6,15 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
+.loading-spinner{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding-top: 150px;
+    padding-bottom: 150px;
+}
+.loading-spinner img{
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+}
