--- a/src/components/header/Navigation.css
+++ b/src/components/header/Navigation.css
@@ -55,6 +55,12 @@
     margin-top: 20px;
     position: relative; 
 }
+.profile-pic {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
 
 .item-count {
     font-size: 10px;
