--- a/src/components/signup/signin.css
+++ b/src/components/signup/signin.css
@@ -162,6 +162,11 @@
     font-size: 14px;
     text-align: center;
     color: #808080;
+    margin-bottom: 60px;
+  }
+  .glog{
+    margin-top: -100px;
+    margin-bottom: 20px;
   }
   @media (max-width: 768px) {
     .sign-button{
