--- a/src/components/header/Navigation.css
+++ b/src/components/header/Navigation.css
@@ -55,6 +55,9 @@
     margin-top: 20px;
     position: relative; 
 }
+.faue{
+  padding-top: 7px;
+}
 .profile-pic {
   width: 40px;
   height: 40px;
