--- a/src/components/allproducts/Products.css
+++ b/src/components/allproducts/Products.css
@@ -125,6 +125,15 @@
       padding: 80px;
       gap: 15px ;
     }
+    #price{
+      padding-left: 8px;
+      margin-left: -11px;
+      }
+      #con{
+        padding-left: 8px;
+        margin-left: 28px;
+      }
+      
     .scoot {
       text-align: center;
       margin-bottom: -50px;
