--- a/src/components/men/Men.css
+++ b/src/components/men/Men.css
@@ -121,6 +121,14 @@
     .fum {
       padding: 0 10px;
     }
+    #price{
+      padding-left: 8px;
+      margin-left: -11px;
+      }
+      #con{
+        padding-left: 8px;
+        margin-left: 28px;
+      }
     
     .scoot h1 {
       font-size: 1.5rem;
