--- a/src/components/women/Women.css
+++ b/src/components/women/Women.css
@@ -91,6 +91,7 @@
   #detail{
     margin-bottom: 150px;
    }
+   
   
   
   @media (max-width: 1024px) {
@@ -107,6 +108,14 @@
      padding: 80px;
       gap: 15px ;
 
+    }
+    #price{
+    padding-left: 8px;
+    margin-left: -11px;
+    }
+    #con{
+      padding-left: 8px;
+      margin-left: 28px;
     }
   
     .fum {
