--- a/src/components/women/Women.css
+++ b/src/components/women/Women.css
@@ -91,6 +91,14 @@
   #detail{
     margin-bottom: 150px;
    }
+   #price{
+    padding-left: 8px;
+    margin-left: -11px;
+    }
+    #con{
+      padding-left: 8px;
+      margin-left: 28px;
+    }
    
   
   
