--- a/src/components/home/HomePage.css
+++ b/src/components/home/HomePage.css
@@ -170,7 +170,15 @@ background-color: whitesmoke;
    margin: 0px auto;
    text-align: center;
    padding-top: 60px;
-}
+} #price{
+  padding-left: 8px;
+  margin-left: -11px;
+  }
+  #con{
+    padding-left: 8px;
+    margin-left: 28px;
+  }
+
   
   
   
