--- a/src/components/men/Men.css
+++ b/src/components/men/Men.css
@@ -99,6 +99,14 @@
     height: 50px;
     animation: spin 2s linear infinite;
 }
+#price{
+  padding-left: 8px;
+  margin-left: -11px;
+  }
+  #con{
+    padding-left: 8px;
+    margin-left: 28px;
+  }
 
   
   
