--- a/src/components/account/ProfilePage.css
+++ b/src/components/account/ProfilePage.css
@@ -18,3 +18,94 @@
     height: 50px;
     animation: spin 2s linear infinite;
 }
+.order-history{
+    margin-top: 40px !important;
+}
+
+
+
+
+.order-history {
+    padding: 20px;
+}
+
+.order-history h1 {
+    margin-bottom: 20px;
+}
+
+.order-history ul {
+    list-style: none;
+    padding: 0;
+}
+
+.order-history ul li {
+    padding: 15px;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+}
+
+.order-history ul li h3 {
+    margin: 0;
+}
+
+.order-history ul li ul {
+    padding-left: 20px;
+}
+
+
+.profile-container {
+    display: flex;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+.sidebar {
+    width: 250px;
+    padding: 20px;
+    padding-top: 90px;
+    padding-bottom: 200px;
+    background-color: #f5f5f5;
+    border-right: 1px solid #ddd;
+}
+
+.sidebar h3 {
+    margin-top: 0;
+}
+
+.sidebar ul {
+    list-style: none;
+    padding: 0;
+}
+
+.sidebar ul li {
+    padding: 10px 0;
+    cursor: pointer;
+}
+
+.sidebar ul li:hover {
+    background-color: #ddd;
+}
+
+.logout-button {
+    margin-top: 20px;
+}
+
+.profile {
+    flex-grow: 1;
+    padding: 20px;
+}
+
+.profile-info {
+    text-align: center;
+}
+.side{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+
+
+
+
+
+
