--- a/src/components/cart/CartPage.css
+++ b/src/components/cart/CartPage.css
@@ -95,5 +95,24 @@
     padding-bottom: 10px;
 }
 .cart-checkout{
+    text-align: center;
     padding-bottom: 20px;
+}
+@media (max-width: 768px){
+    .btn4{
+        background-color:  white;
+        border: none;
+        color: black;
+        padding-top: 10px;
+        padding-bottom: 8px;
+        margin-left: -50px;
+        border-radius: 6px;
+    }
+    .cart-item{
+        background-color: white;
+        border-radius: 8px;
+        padding-bottom: 20px;
+        padding-left: 10px;
+        padding-right: 30px;
+    }
 }
