--- a/src/components/cart/CartPage.css
+++ b/src/components/cart/CartPage.css
@@ -42,7 +42,7 @@
     border-radius: 6px;
 }
 .btn4:hover{
-    background-color:  none;
+    background-color:  white;
 }
 .btn5{
     background-color:  rgba(128, 128, 128, 0.705);
